--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<div class="titulo"><h1>Bleach</h1></div>
+<div class="titulo"><img src="./assets/images/Bleach_(manga)_Logo.svg" alt=""></div>
     <h2 class="subtitulo">personagens principais</h2>
 
     <div class="container">
